syntax = "proto3";

package telemetry;

option go_package = "github.com/telemetry/proto";

import "google/protobuf/timestamp.proto";

message SensorData {
  string sensor_name = 1;
  int32 sensor_value = 2;
  google.protobuf.Timestamp timestamp = 3;
}

service TelemetryService {
  rpc SendSensorData(SensorData) returns (SensorDataResponse);
}

message SensorDataResponse {
  bool success = 1;
  string message = 2;
}

